--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
