--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
-    "ts-node": "^10.9.2",
+    "process": "^0.11.10",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -32,10 +32,14 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^24.6.2",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.8.1",
     "@types/nodemailer": "^7.0.2",
+    "multer": "^2.0.2",
     "prisma": "^6.16.3",
-    "tsx": "^4.19.0",
+    "slugify": "^1.6.6",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
