--- a/api/package.json
+++ b/api/package.json
@@ -20,10 +20,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
+    "paystack-api": "^2.0.6",
+    "pdfkit": "^0.17.2",
     "process": "^0.11.10",
     "zod": "^3.23.8"
   },
@@ -35,6 +39,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.8.1",
     "@types/nodemailer": "^7.0.2",
+    "@types/pdfkit": "^0.17.3",
     "multer": "^2.0.2",
     "prisma": "^6.16.3",
     "slugify": "^1.6.6",
