adding start.sh

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,16 +2,16 @@
 FROM node:20-alpine AS base
 WORKDIR /app
 
-# Needed for Prisma binary & general TLS stuff (safe even if not using Prisma)
+# Prisma/OpenSSL + general TLS (harmless even if not using Prisma)
 RUN apk add --no-cache openssl
 
 # ---------- Dependencies layer ----------
 FROM base AS deps
 
-# Copy only package manifests first (better cache)
+# Copy only package manifests for better cache usage
 COPY package*.json ./
 
-# If you use pnpm/yarn, swap this accordingly
+# If you use pnpm/yarn, adjust accordingly
 RUN npm ci
 
 # ---------- Build layer ----------
@@ -20,34 +20,34 @@ FROM base AS build
 COPY package*.json ./
 COPY --from=deps /app/node_modules ./node_modules
 
-# Copy the rest of the source
+# Copy the full source
 COPY . .
 
 # Build TypeScript -> dist/
-# Make sure "build" exists in package.json (e.g. "tsc")
+# Assumes "build" script exists in package.json
 RUN npm run build
 
 # ---------- Runtime layer ----------
-FROM base AS runner
-
+FROM node:20-alpine AS runner
+WORKDIR /app
 ENV NODE_ENV=production
 
-WORKDIR /app
-
-# Copy built JS
-COPY --from=build /app/dist ./dist
-
-# Copy node_modules from deps (production+dev is fine for now; can be pruned later)
+# Runtime deps (you can later switch to pruned prod deps if you like)
 COPY --from=deps /app/node_modules ./node_modules
 
-# If you use Prisma, keep schema & migrations so generate/migrate works in pre-deploy
-COPY prisma ./prisma
+# Built JS
+COPY --from=build /app/dist ./dist
 
-# Default port INSIDE the container.
-# Railway will inject $PORT and you should respect it in env.port.
+# Prisma schema/migrations if you use Prisma
+COPY --from=build /app/prisma ./prisma
+
+# Start script
+COPY start.sh ./start.sh
+RUN chmod +x ./start.sh
+
+# Default internal port (Railway will override PORT env var)
 ENV PORT=4000
 EXPOSE 4000
 
-# Start the compiled server
-# Assumes src/server.ts -> dist/server.js
-CMD ["node", "dist/server.js"]
+# Single entrypoint
+CMD ["./start.sh"]
