--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
 
       - name: Install deps
         run: npm ci
-
+        
       - name: Build
         run: npm run build
+
+      - name: Typecheck
+        working-directory: ui
+        run: npm run typecheck
