--- a/ui/package.json
+++ b/ui/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",          
-    "typecheck": "tsc --noEmit",       
+    "build": "vite build",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist -l tcp://0.0.0.0:$PORT"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
@@ -19,7 +20,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
