--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,8 +2,9 @@
 FROM node:20-alpine AS base
 WORKDIR /app
 
-# Prisma/OpenSSL + general TLS (harmless even if not using Prisma)
-RUN apk add --no-cache openssl
+# TLS + Prisma runtime deps
+# libc6-compat is a common fix for native modules on alpine
+RUN apk add --no-cache openssl libc6-compat
 
 # ---------- Dependencies layer ----------
 FROM base AS deps
@@ -11,20 +12,26 @@ FROM base AS deps
 # Copy only package manifests for better cache usage
 COPY package*.json ./
 
-# If you use pnpm/yarn, adjust accordingly
+# Install ALL deps (keep dev deps because we run prisma CLI at runtime)
 RUN npm ci
+
+# Bring prisma now so we can generate the client into node_modules
+COPY prisma ./prisma
+
+# Generate Prisma client artifacts into node_modules/@prisma/*
+RUN npx prisma generate
 
 # ---------- Build layer ----------
 FROM base AS build
 
-COPY package*.json ./
+# Reuse deps (including generated Prisma client)
 COPY --from=deps /app/node_modules ./node_modules
+COPY package*.json ./
 
 # Copy the full source
 COPY . .
 
 # Build TypeScript -> dist/
-# Assumes "build" script exists in package.json
 RUN npm run build
 
 # ---------- Runtime layer ----------
@@ -32,22 +39,25 @@ FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 
-# Runtime deps (you can later switch to pruned prod deps if you like)
+# Keep the same system libs as base
+RUN apk add --no-cache openssl libc6-compat
+
+# Copy runtime deps (with generated Prisma client inside)
 COPY --from=deps /app/node_modules ./node_modules
 
 # Built JS
 COPY --from=build /app/dist ./dist
 
-# Prisma schema/migrations if you use Prisma
+# Prisma schema & migrations are required for migrate/seed at runtime
 COPY --from=build /app/prisma ./prisma
 
 # Start script
 COPY start.sh ./start.sh
 RUN chmod +x ./start.sh
 
-# Default internal port (Railway will override PORT env var)
+# Default internal port (Railway will set PORT)
 ENV PORT=4000
 EXPOSE 4000
 
-# Single entrypoint
+# One entrypoint
 CMD ["./start.sh"]
