--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.3",
     "serve": "^14.2.1",
     "zustand": "^5.0.8"
