--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "i": "^0.3.7",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.2",
     "morgan": "^1.10.0",
     "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
@@ -47,6 +48,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/luxon": "^3.7.1",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.4",
