--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
+    "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -28,7 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^24.10.4",
+    "@types/node": "^24.10.12",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -41,6 +42,7 @@
     "postcss": "^8.5.6",
     "serve": "^14.2.5",
     "tailwindcss": "^4.1.14",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
