--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@flydotio/dockerfile": "^0.7.10",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.10.12",
     "@types/react": "^19.1.16",
