--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "pg": "^8.18.0",
     "process": "^0.11.10",
     "resend": "^6.4.2",
+    "serverless-http": "^4.0.0",
     "tsx": "^4.21.0",
     "zod": "^3.23.8"
   },
