--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -25,7 +25,7 @@ RUN apk add --no-cache openssl libc6-compat
 ENV NODE_ENV=production
 ENV PORT=8080
 # ✅ default: seed runs. Set RUN_SEED=false in Railway if you want to disable.
-ENV RUN_SEED=true
+ENV RUN_SEED=false
 
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=build /app/dist ./dist
