--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,53 +1,28 @@
 # syntax = docker/dockerfile:1
 
-# Adjust NODE_VERSION as desired
 ARG NODE_VERSION=23.11.0
-FROM node:${NODE_VERSION}-slim AS base
+FROM node:${NODE_VERSION}-slim AS build
 
-LABEL fly_launch_runtime="Vite"
-
-# Vite app lives here
 WORKDIR /app
 
-# Set production environment
-ENV NODE_ENV="production"
-
-
-# Throw-away build stage to reduce size of final image
-FROM base AS build
-
-# Install packages needed to build node modules
-RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y build-essential node-gyp pkg-config python-is-python3
-
-# Install node modules
 COPY package-lock.json package.json ./
 RUN npm ci --include=dev
 
-# Copy application code
 COPY . .
 
 ARG VITE_API_URL
 ARG VITE_APP_URL
-
 ENV VITE_API_URL=$VITE_API_URL
 ENV VITE_APP_URL=$VITE_APP_URL
 
-# Build application
 RUN npm run build
 
-# Remove development dependencies
-RUN npm prune --omit=dev
+FROM nginx:latest
 
-
-# Final stage for app image
-FROM nginx
-
-# Copy built application
 COPY --from=build /app/dist /usr/share/nginx/html
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# ✅ add nginx SPA fallback config
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
-# Start the server by default, this can be overwritten at runtime
 EXPOSE 80
-CMD [ "/usr/sbin/nginx", "-g", "daemon off;" ]
+CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
