--- a/ui/nginx/default.conf
+++ b/ui/nginx/default.conf
@@ -4,14 +4,24 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # Optional: cache static assets heavily (Vite usually fingerprints them)
+  # ✅ Proxy API requests to your backend service
+  location /api/ {
+    proxy_pass https://dayspring-api-production.up.railway.app;
+    proxy_http_version 1.1;
+
+    proxy_set_header Host dayspring-api-production.up.railway.app;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+  }
+
   location /assets/ {
     try_files $uri =404;
     expires 1y;
     add_header Cache-Control "public, immutable";
   }
 
-  # ✅ SPA fallback: send all non-file routes to index.html
   location / {
     try_files $uri $uri/ /index.html;
   }
