--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,5 +61,5 @@ jobs:
       - name: Build
         env:
           # Use your real API URL if you want a stronger build check
-          VITE_API_URL: https://daysping-api-production.up.railway.app
+          VITE_API_URL: https://api.dayspringhouse.com
         run: npm run build
